# stm32_gtest_c_code

./: .gitignore  CMakeLists.txt  Makefile  README.md  codecov.yml
.github/workflows/: flawfinder.yml  lizard.yml  unit-test.yml
cmake/: Docs.cmake
docker/: Dockerfile
docs/: Doxyfile
source/: CMakeLists.txt
source/nucleo-f446ze-library/: .cproject  .mxproject  .project  CMakeLists.txt
source/nucleo-f446ze-library/Inc/: stm32f4xx_hal_conf.h
source/nucleo-f446ze-library/Libraries/: CMakeLists.txt
source/nucleo-f446ze-library/Libraries/Drivers/: CMakeLists.txt
source/nucleo-f446ze-library/Libraries/Drivers/Include/: gpio.h
source/nucleo-f446ze-library/Libraries/Drivers/Src/: gpio.c
source/nucleo-f446ze-library/Libraries/Middleware/: CMakeLists.txt
source/nucleo-f446ze-library/Libraries/Middleware/Include/: led.h
source/nucleo-f446ze-library/Libraries/Middleware/Src/: led.c
source/stm32-cube-ide/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F446ZETX_FLASH.ld  STM32F446ZETX_RAM.ld  tutorial-gtest-stm32.ioc
source/stm32-cube-ide/BSP/Include/: bsp.h
source/stm32-cube-ide/BSP/Src/: bsp.c
source/stm32-cube-ide/Core/Inc/: stm32f4xx_hal_conf.h
source/stm32-cube-ide/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32-cube-ide/: CMakeLists.txt
stm32-cube-ide/Core/Inc/: main.h
stm32-cube-ide/Core/Src/: main.c
tests/: CMakeLists.txt
tests/header-overrides/: core_cm4_override.h  main_override.h  stm32f446xx_override.h  stm32f4xx_hal_gpio_override.h
tests/integration/: hello_integration_test.cpp  integration_hello_test.cpp
tests/mock/: assert_mock.c  fixture.h  gpio_mock.cpp  gpio_mock.h  hal_gpio_mock.cpp  hal_gpio_mock.h
tests/unit/: gpio_test.cpp  hello_unit_test.cpp  led_test.cpp  unit_hello_test.cpp
tests/unit/drivers/: gpio_test.cpp
tests/unit/middleware/: led_test.cpp
