set(CURRENT_FOLDER_PATH "${CMAKE_CURRENT_SOURCE_DIR}")

set(STM32_CUBE_INCLUDE_FILES
   ${CURRENT_FOLDER_PATH}/Inc/
   ${CURRENT_FOLDER_PATH}/Drivers/STM32F4xx_HAL_Driver/Inc/
   ${CURRENT_FOLDER_PATH}/Drivers/CMSIS/Include/
   ${CURRENT_FOLDER_PATH}/Drivers/CMSIS/Device/ST/STM32F4xx/Include/
)

add_subdirectory(Libraries)